--- a/Atividade pontuada/CSS/style.CSS
+++ b/Atividade pontuada/CSS/style.CSS
@@ -4,25 +4,30 @@ body{
 header{
     text-align: center;
 }
-nav a{
+nav{
+    display: inline-flex;
+}
+nav a{  
+    float: left;
     text-decoration: none;
     background-color: rgba(226, 214, 221, 0.753);
     border-radius: 2px;
     border: 1px, solid, rgb(14, 13, 13);
     padding: 5px;
     margin-left: 80px;
+    margin-right: 126px;
     margin-bottom: 20px;
 }
 nav a:hover{
     background-color: rgba(243, 22, 214, 0.753);
     color: black;
 }
-.nav .login button {
+.nav .login {
     float: right;
     padding: 6px;
     margin-top: 8px;
     margin-right: 16px;
-    margin-left: 280px;
+    margin-left: 80px;
     background: #ddd;
     font-size: 17px;
     border: none;
